# aa-wizard-misc

./: .coveragerc  .isort.cfg  CHANGELOG.md  CODE_OF_CONDUCT.md  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: github-release.yml
testauth/: celery.py  settings.py
testauth/settings/: base.py  local.py
wizardmisc/: __init__.py  app_settings.py  apps.py  auth_hooks.py  models.py  tasks.py  urls.py  views.py
wizardmisc/migrations/: 0001_initial.py  0002_dustybotcommands.py  0003_dustybottimers.py
wizardmisc/tests/: test_blacklistcheck.py  test_newaccountdiscordping.py
