[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "aa-wizard-misc"
description = "Wizard misc"
readme = "README.md"
keywords = [
    "allianceauth",
    "wizard",
]
license = { file = "LICENSE" }
authors = [
    { name = "Dusty Meg", email = "aa_plugins@mmoore.uk" },
]
requires-python = ">=3.10"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [
    "version",
]
dependencies = [
    "allianceauth>=4,<5",
    "allianceauth-corptools>=2.7",
]
urls.Changelog = "https://github.com/Dusty-Meg/aa-wizard-misc/blob/master/CHANGELOG.md"
urls."Issue / Bug Reports" = "https://github.com/Dusty-Meg/aa-wizard-misc/issues"

[tool.hatch.version]
path = "wizardmisc/__init__.py"

[tool.hatch.build]
include = [
    "/wizardmisc",
]
